--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Axpress Logistic App</string>
     <string name="registrationPage">Registration</string>
     <string name="loginPage">Login</string>
-    <string name="redirectOnRegistration_text_btn">No account yet? Create one</string>
+    <string name="forget_password_text_btn">forget password ?</string>
     <string name="password">Password</string>
     <string name="employee_id">Employee ID</string>
     <string name="employee_name">Name</string>
