--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="employee_id">Employee ID</string>
     <string name="employee_name">Name</string>
     <string name="gender">Gender</string>
-    <string name="branch">Branch :</string>
+    <string name="branch">Branch</string>
     <string name="designation">Designation</string>
     <string name="email_id">Email ID.</string>
     <string name="contact_no">Contact No.</string>
@@ -27,7 +27,7 @@
     <string name="docket_enquiry">Docket/Invoice Enquiry</string>
     <string name="hrms">HRMS</string>
     <string name="attendence_record">Attendence Record</string>
-    <string name="date_time">Date :</string>
+    <string name="date_time">Date</string>
     <string name="mark_attendance">Mark Attendance</string>
     <string name="table_layout_4_dates">Dates</string>
     <string name="table_layout_4_open_in">In</string>
@@ -38,7 +38,7 @@
     <string name="searchbyname_id">Search By Name / Emp. ID</string>
     <string name="name_id">Name / Employee ID</string>
     <string name="employee_not_found">Employee not found!!</string>
-    <string name="department">Development : </string>
+    <string name="department">Department</string>
     <string name="branch_location">Gurgaon</string>
     <string name="leave_info">Leave Info.</string>
     <string name="blank_field_error">Enter the correct input!!</string>
@@ -46,4 +46,23 @@
     <string name="vehical_enquiry">Vehicale Tracking</string>
     <string name="add_customer">Add Customer</string>
     <string name="qrcode">QR Code Scanning</string>
+    <string name="forgetpassword">Forget Password</string>
+    <string name="editprofile">Profile</string>
+    <string name="reset_string">Please enter your registered Email ID and Employee ID beloew.</string>
+    <string name="back">BACK</string>
+    <string name="submit">SUBMIT</string>
+    <string name="consignee">Consignee</string>
+    <string name="docket_date">Docket Date</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="status">Status</string>
+    <string name="docket_noID">Docket No</string>
+    <string name="challen_noID">Challen No</string>
+    <string name="challen_date">Challen Date</string>
+    <string name="vehical_no">Vehicle No</string>
+    <string name="challan_details">Challan/TCS Details</string>
+    <string name="dwd_details">DWD Details</string>
+    <string name="docket_tracking">Docket Tracking</string>
+    <string name="docket">Docket</string>
+    <string name="invoice">Invoice</string>
 </resources>
