--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,14 @@
     <string name="receving">Receiving Date</string>
     <string name="received_byId">Received By</string>
     <string name="show_more">Show More</string>
+    <string name="mapview">View Map</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="name">Name</string>
+    <string name="contact">Contact</string>
+    <string name="dateofbirth">Date of birth (YYYY/MM/DD)</string>
+
+    <string name="google_maps_key">AIzaSyA7x5XMZXg6oAuX1qSWD4DHQA6-o3N_btY</string>
 </resources>
