--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,8 @@
     <string name="front_view">Front Card</string>
     <string name="back_view">Back Card</string>
     <string name="barcode">Barcode</string>
+    <string name="btn_camera">Camera</string>
+    <string name="btn_gallery">Gallery</string>
+    <string name="preview_description">Image preview</string>
+    <string name="btn_save">Save</string>
 </resources>
