--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="btn_gallery">Gallery</string>
     <string name="preview_description">Image preview</string>
     <string name="btn_save">Save</string>
+    <string name="address">Address</string>
 </resources>
