--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,6 +149,7 @@
     <string name="my_bcard">My Card</string>
     <string name="scan_new_card">Scan New Card</string>
     <string name="no_data_available">No Data Available</string>
+    <string name="unique_compId">com2343545</string>
     <string-array name="status_arrays">
         <item>Select</item>
         <item>In Process</item>
