modification in leave approval

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,4 +274,5 @@
     <string name="app_version">app_version</string>
     <string name="app_publish">Powered by Axpress Logistics India Pvt Ltd</string>
     <string name="app_all_rights">All rights reserved.</string>
+    <string name="reset_password">Reset Password</string>
 </resources>
